--- a/MSDevUnion.BingWallpaper/BingoWallpaper/BingoWallpaper.csproj
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper/BingoWallpaper.csproj
@@ -156,6 +156,10 @@
       <Name>BingoWallpaper.Services</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Controls\" />
+    <Folder Include="Styles\" />
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
