--- a/MSDevUnion.BingWallpaper/BingoWallpaper.Services/BingoWallpaper.Services.csproj
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.Services/BingoWallpaper.Services.csproj
@@ -108,11 +108,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\WallpaperService.cs" />
     <EmbeddedResource Include="Properties\BingoWallpaper.Services.rd.xml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Services\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
