--- a/MSDevUnion.BingWallpaper/BingoWallpaper.Utils/BingoWallpaper.Utils.csproj
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.Utils/BingoWallpaper.Utils.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{92E77E7A-8289-470A-9A2F-3B7EB1F9FB2B}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{A1DF2ED8-A9FA-4C5C-981C-847C24DB5935}</ProjectGuid>
+    <OutputType>winmdobj</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BingoWallpaper</RootNamespace>
-    <AssemblyName>BingoWallpaper.Services</AssemblyName>
+    <AssemblyName>BingoWallpaper.Utils</AssemblyName>
     <DefaultLanguage>zh-CN</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion>10.0.10586.0</TargetPlatformVersion>
@@ -16,6 +16,7 @@
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+    <AllowCrossPlatformRetargeting>false</AllowCrossPlatformRetargeting>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -107,19 +108,8 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\WallpaperService.cs" />
-    <EmbeddedResource Include="Properties\BingoWallpaper.Services.rd.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\BingoWallpaper.Models\BingoWallpaper.Models.csproj">
-      <Project>{422053c1-98bf-49c8-9701-89ebfa88a5ab}</Project>
-      <Name>BingoWallpaper.Models</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\BingoWallpaper.Utils\BingoWallpaper.Utils.csproj">
-      <Project>{a1df2ed8-a9fa-4c5c-981c-847c24db5935}</Project>
-      <Name>BingoWallpaper.Utils</Name>
-    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
