--- a/MSDevUnion.BingWallpaper/BingoWallpaper.Services/BingoWallpaper.Services.csproj
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.Services/BingoWallpaper.Services.csproj
@@ -108,6 +108,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\IWallpaperService.cs" />
     <Compile Include="Services\WallpaperService.cs" />
     <EmbeddedResource Include="Properties\BingoWallpaper.Services.rd.xml" />
   </ItemGroup>
