--- a/MSDevUnion.BingWallpaper/BingoWallpaper.Models/project.json
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.Models/project.json
@@ -1,17 +1,16 @@
 ﻿{
+  "supports": {
+    "net46.app": {},
+    "uwp.10.0.app": {}
+  },
   "dependencies": {
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
+    "Microsoft.NETCore": "5.0.0",
+    "Microsoft.NETCore.Portable.Compatibility": "1.0.0",
     "Newtonsoft.Json": "8.0.3"
   },
   "frameworks": {
-    "uap10.0": {}
-  },
-  "runtimes": {
-    "win10-arm": {},
-    "win10-arm-aot": {},
-    "win10-x86": {},
-    "win10-x86-aot": {},
-    "win10-x64": {},
-    "win10-x64-aot": {}
+    "dotnet": {
+      "imports": "portable-net452+win81"
+    }
   }
 }
