--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/project.json
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/project.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "FontAwesome.UWP": "4.5.0.8",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
+    "Microsoft.Xaml.Behaviors.Uwp.Managed": "1.1.0",
     "MvvmLightLibs": "5.3.0",
     "PlatformSpecific.Analyzer": "2.0.2",
     "UmengPlusAnalytics": "3.1.0"
