--- a/MSDevUnion.BingWallpaper/BingoWallpaper.Model/BingoWallpaper.Model.csproj
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.Model/BingoWallpaper.Model.csproj
@@ -48,6 +48,8 @@
     <Compile Include="Model\LeanCloudResultBase.cs" />
     <Compile Include="Model\LeanCloudResultCollection.cs" />
     <Compile Include="Model\Message.cs" />
+    <Compile Include="Model\Wallpaper.cs" />
+    <Compile Include="Model\WallpaperCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
