--- a/MSDevUnion.BingWallpaper/BingoWallpaper.BackgroundTask/BingoWallpaper.BackgroundTask.csproj
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.BackgroundTask/BingoWallpaper.BackgroundTask.csproj
@@ -108,6 +108,7 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="UpdateTileTask.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
