--- a/MSDevUnion.BingWallpaper/BingoWallpaper.Models/BingoWallpaper.Models.csproj
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.Models/BingoWallpaper.Models.csproj
@@ -5,11 +5,11 @@
     <MinimumVisualStudioVersion>14.0</MinimumVisualStudioVersion>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{215057C0-8F38-4B43-9969-87242AA39EBA}</ProjectGuid>
+    <ProjectGuid>{0B0BF029-A7EA-44DB-8BA4-3CB52E7D4093}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BingoWallpaper</RootNamespace>
-    <AssemblyName>BingoWallpaper.Service</AssemblyName>
+    <AssemblyName>BingoWallpaper.Models</AssemblyName>
     <DefaultLanguage>zh-CN</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -39,16 +39,20 @@
     <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Archive.cs" />
+    <Compile Include="Models\AVObject.cs" />
+    <Compile Include="Models\CoverStory.cs" />
+    <Compile Include="Models\Hotspot.cs" />
+    <Compile Include="Models\Image.cs" />
+    <Compile Include="Models\LeanCloudPointer.cs" />
+    <Compile Include="Models\LeanCloudResultBase.cs" />
+    <Compile Include="Models\LeanCloudResultCollection.cs" />
+    <Compile Include="Models\Message.cs" />
+    <Compile Include="Models\Wallpaper.cs" />
+    <Compile Include="Models\WallpaperCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service\IWallpaperService.cs" />
-    <Compile Include="Service\WallpaperService.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\BingoWallpaper.Utils\BingoWallpaper.Utils.csproj">
-      <Project>{94813fa8-4a95-474e-93fb-1e9c9eab9bf7}</Project>
-      <Name>BingoWallpaper.Utils</Name>
-    </ProjectReference>
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
