--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/BingoWallpaper.UWP.csproj
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/BingoWallpaper.UWP.csproj
@@ -105,27 +105,27 @@
     <Compile Include="Converters\BooleanInverseConverter.cs" />
     <Compile Include="Design\WallpaperService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service\ISystemSettingService.cs" />
-    <Compile Include="Service\SystemSettingService.cs" />
-    <Compile Include="ViewModel\AboutViewModel.cs" />
-    <Compile Include="ViewModel\DetailViewModel.cs" />
-    <Compile Include="ViewModel\MainViewModel.cs" />
-    <Compile Include="ViewModel\SettingViewModel.cs" />
-    <Compile Include="ViewModel\ViewModelLocator.cs" />
-    <Compile Include="View\AboutView.xaml.cs">
+    <Compile Include="Services\ISystemSettingService.cs" />
+    <Compile Include="Services\SystemSettingService.cs" />
+    <Compile Include="ViewModels\AboutViewModel.cs" />
+    <Compile Include="ViewModels\DetailViewModel.cs" />
+    <Compile Include="ViewModels\MainViewModel.cs" />
+    <Compile Include="ViewModels\SettingViewModel.cs" />
+    <Compile Include="ViewModels\ViewModelLocator.cs" />
+    <Compile Include="Views\AboutView.xaml.cs">
       <DependentUpon>AboutView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\DetailView.xaml.cs">
+    <Compile Include="Views\DetailView.xaml.cs">
       <DependentUpon>DetailView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\MainView.xaml.cs">
+    <Compile Include="Views\MainView.xaml.cs">
       <DependentUpon>MainView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\NavigationBackRequestedEventArgs.cs" />
-    <Compile Include="View\SettingView.xaml.cs">
+    <Compile Include="Views\NavigationBackRequestedEventArgs.cs" />
+    <Compile Include="Views\SettingView.xaml.cs">
       <DependentUpon>SettingView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\ViewBase.cs" />
+    <Compile Include="Views\ViewBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -153,34 +153,34 @@
       <Generator>MSBuild:Compile</Generator>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Page>
-    <Page Include="View\AboutView.xaml">
-      <SubType>Designer</SubType>
+    <Page Include="Views\AboutView.xaml">
       <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
-    <Page Include="View\DetailView.xaml">
-      <SubType>Designer</SubType>
+    <Page Include="Views\DetailView.xaml">
       <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
-    <Page Include="View\MainView.xaml">
-      <SubType>Designer</SubType>
+    <Page Include="Views\MainView.xaml">
       <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
-    <Page Include="View\SettingView.xaml">
-      <SubType>Designer</SubType>
+    <Page Include="Views\SettingView.xaml">
       <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controls\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\BingoWallpaper.Model\BingoWallpaper.Model.csproj">
-      <Project>{ecd5108f-3420-4436-a7fa-bfe7c8a23e4e}</Project>
-      <Name>BingoWallpaper.Model</Name>
+    <ProjectReference Include="..\BingoWallpaper.Models\BingoWallpaper.Models.csproj">
+      <Project>{0b0bf029-a7ea-44db-8ba4-3cb52e7d4093}</Project>
+      <Name>BingoWallpaper.Models</Name>
     </ProjectReference>
-    <ProjectReference Include="..\BingoWallpaper.Service\BingoWallpaper.Service.csproj">
-      <Project>{215057c0-8f38-4b43-9969-87242aa39eba}</Project>
-      <Name>BingoWallpaper.Service</Name>
+    <ProjectReference Include="..\BingoWallpaper.Services\BingoWallpaper.Services.csproj">
+      <Project>{749fdca3-8782-441f-a8d3-7c95e3ca00ad}</Project>
+      <Name>BingoWallpaper.Services</Name>
     </ProjectReference>
     <ProjectReference Include="..\BingoWallpaper.Utils\BingoWallpaper.Utils.csproj">
       <Project>{94813fa8-4a95-474e-93fb-1e9c9eab9bf7}</Project>
