--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/BingoWallpaper.UWP.csproj
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/BingoWallpaper.UWP.csproj
@@ -106,12 +106,15 @@
     </Compile>
     <Compile Include="Configuration\ISettings.cs" />
     <Compile Include="Configuration\AppSettings.cs" />
+    <Compile Include="Controls\ExceptionEventArgs.cs" />
     <Compile Include="Controls\ImageEx.cs" />
     <Compile Include="Converters\BooleanInverseConverter.cs" />
     <Compile Include="Design\WallpaperService.cs" />
+    <Compile Include="Extensions\FileExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ISystemSettingService.cs" />
     <Compile Include="Services\SystemSettingService.cs" />
+    <Compile Include="Utils\HashHelper.cs" />
     <Compile Include="ViewModels\AboutViewModel.cs" />
     <Compile Include="ViewModels\DetailViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
