--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/project.json
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/project.json
@@ -5,7 +5,8 @@
     "Microsoft.Xaml.Behaviors.Uwp.Managed": "1.1.0",
     "MvvmLightLibs": "5.3.0",
     "PlatformSpecific.Analyzer": "2.0.2",
-    "UmengPlusAnalytics": "3.1.0"
+    "UmengPlusAnalytics": "3.1.0",
+    "WinRTXamlToolkit.UWP": "2.0.0"
   },
   "frameworks": {
     "uap10.0": {}
