--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/project.json
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/project.json
@@ -8,6 +8,7 @@
     "MvvmLightLibs": "5.3.0",
     "PlatformSpecific.Analyzer": "2.0.3",
     "UmengPlusAnalytics": "3.1.0",
+    "WeChatSDK": "2.0.1",
     "WinRTXamlToolkit.UWP": "2.0.0"
   },
   "frameworks": {
