--- a/MSDevUnion.BingWallpaper/BingoWallpaper.Utils/BingoWallpaper.Utils.csproj
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.Utils/BingoWallpaper.Utils.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="Constants.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\StringTaskLocker.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
