--- a/MSDevUnion.BingWallpaper/BingoWallpaper.Services.Uwp/BingoWallpaper.Services.Uwp.csproj
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.Services.Uwp/BingoWallpaper.Services.Uwp.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{5B42B74F-5F69-484F-8397-4BF23BD45342}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BingoWallpaper.Services.Uwp</RootNamespace>
+    <RootNamespace>BingoWallpaper</RootNamespace>
     <AssemblyName>BingoWallpaper.Services.Uwp</AssemblyName>
     <DefaultLanguage>zh-CN</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
@@ -107,12 +107,20 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\TileService.cs" />
     <EmbeddedResource Include="Properties\BingoWallpaper.Services.Uwp.rd.xml" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Services\" />
+    <ProjectReference Include="..\BingoWallpaper.Models\BingoWallpaper.Models.csproj">
+      <Project>{0b0bf029-a7ea-44db-8ba4-3cb52e7d4093}</Project>
+      <Name>BingoWallpaper.Models</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\BingoWallpaper.Services\BingoWallpaper.Services.csproj">
+      <Project>{749fdca3-8782-441f-a8d3-7c95e3ca00ad}</Project>
+      <Name>BingoWallpaper.Services</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
