--- a/MSDevUnion.BingWallpaper/BingoWallpaper.Services/BingoWallpaper.Services.csproj
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.Services/BingoWallpaper.Services.csproj
@@ -40,10 +40,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\BingWallpaperService.cs" />
+    <Compile Include="Services\IBingWallpaperService.cs" />
     <Compile Include="Services\IShareService.cs" />
     <Compile Include="Services\ITileService.cs" />
+    <Compile Include="Services\ILeanCloudWallpaperService.cs" />
     <Compile Include="Services\IWallpaperService.cs" />
-    <Compile Include="Services\WallpaperService.cs" />
+    <Compile Include="Services\LeanCloudWallpaperService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BingoWallpaper.Models\BingoWallpaper.Models.csproj">
